--- a/styles.css
+++ b/styles.css
@@ -12160,17 +12160,15 @@ body {
   /* CSS GRID */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 
   /* gap: 30px; */
   column-gap: 20px;
   row-gap: 40px;
   text-align: center;
-  padding-bottom: 40px;
-}
-
-.intro {
-  background-color: #888888;
+  padding-bottom: 20px;
+  grid-template-rows: 60px;
+  grid-auto-rows: 250px;
 }
 
 .p1,
@@ -12178,6 +12176,7 @@ body {
 .p3,
 .p4 {
   border: solid 1px #000;
+  padding-top: 20px;
 }
 
 .desc {
@@ -12186,6 +12185,8 @@ body {
 
 .intro {
   grid-column: 1 /-1;
+  background-color: #888888;
+  padding-top: 8px;
 }
 
 .footer {
